--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -6,6 +6,7 @@
 }
 
 svg * {
+	color: inherit;
 	fill: currentColor;
 }
 
@@ -16,27 +17,26 @@ svg * {
 *::before,
 *::after {
 	box-sizing: border-box;
-	font-family: Inter, system-ui, sans-serif;
-	color: hsl(234 1% 30%);
-}
-/*
+
+	/*
   2. Remove default margin
 */
-* {
-	margin: 0;
-}
-/*
+	* {
+		margin: 0;
+	}
+	/*
   Typographic tweaks!
   3. Add accessible line-height
   4. Improve text rendering
 */
-body,
-#root {
-	line-height: 1.5;
-	-webkit-font-smoothing: antialiased;
-	width: 100%;
-	height: 100vh;
-
+	body {
+		line-height: 1.5;
+		-webkit-font-smoothing: antialiased;
+		width: 100%;
+		height: 100vh;
+		font-family: Inter, system-ui, sans-serif;
+		color: hsl(234 1% 30%);
+	}
 	--primary: hsl(271.26 99.17% 52.94%);
 	--background: hsl(0 0% 100%);
 	--grey1: hsl(234 3% 14%);
@@ -53,6 +53,7 @@ body,
 	--spacing2: 20px;
 	--timing: 0.2s;
 }
+
 #root {
 	width: 100%;
 	height: 100vh;
