--- a/src/components/sidebar.component.module.scss
+++ b/src/components/sidebar.component.module.scss
@@ -17,8 +17,8 @@
 			flex-basis: 0%;
 		}
 
-		& > button {
-			transform: rotateY(0deg);
+		& > button > svg {
+			transform: rotateY(180deg);
 		}
 	}
 
@@ -26,12 +26,13 @@
 		width: fit-content;
 		margin-inline: auto;
 		padding: 0;
-		transition:
-			transform var(--timing) linear,
-			background-color var(--timing) linear;
-		transform: rotateY(180deg);
 		border-radius: var(--spacing);
 		border: none;
+
+		& > svg {
+			transition: transform var(--timing) linear;
+			transform: rotateY(0deg);
+		}
 
 		&:hover,
 		&:active,
